# api_spec.yaml
@@ -2,14 +2,14 @@ openapi: 3.0.4
 info:
   title: API Projet BigData/IA/Web groupe 1
   description: API permettant la gestion et l'analyse d'arbres via des méthodes Big Data et IA.
-  version: 1.0.3
+  version: 2.0.1
 externalDocs:
   description: Repo Github
   url: https://github.com/allan-cff/projet_A4
 servers:
   # Added by API Auto Mocking Plugin
   - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/AllanCueff/projetA4/1.0.3
+    url: https://virtserver.swaggerhub.com/AllanCueff/projetA4/2.0.1
   - url: http://etu0915.projets.isen-ouest.info
 tags:
   - name: tree
@@ -86,7 +86,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /tree/predictAge:
+  /tree/predict/age:
     get:
       tags:
         - tree
@@ -97,6 +97,22 @@ paths:
         - name: totalHeight
           in: query
           description: La hauteur totale de l'arbre en m
+          required: false
+          schema:
+            type: number
+            format: float
+            default: 0
+        - name: trunkHeight
+          in: query
+          description: La hauteur du tronc de l'arbre en m
+          required: false
+          schema:
+            type: number
+            format: float
+            default: 0
+        - name: trunkDiameter
+          in: query
+          description: Le diametre du tronc de l'arbre en cm
           required: false
           schema:
             type: number
@@ -124,7 +140,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
                 
-  /tree/predictCluster:
+  /tree/predict/cluster:
     get:
       tags:
         - tree
@@ -142,7 +158,7 @@ paths:
             default: 0
         - name: trunkDiameter
           in: query
-          description: Le diamètre du tronc de l'arbre en mm
+          description: Le diamètre du tronc de l'arbre en cm
           required: false
           schema:
             type: integer
